darkwire-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: darkwire-deployment
  labels:
    app: darkwire
  namespace: darkwire-space
spec:
  replicas: 1
  selector:
    matchLabels:
      app: darkwire
      name: darkwire-pod
  template:
    metadata:
      name: darkwire-pod
      labels:
        app: darkwire
        name: darkwire-pod
    spec:
      containers:
        - image: emilen/darkwire.io
          name: darkwire-container
          ports:
            - protocol: TCP
              containerPort: 3001
