darkwire-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: darkwire-service
  labels:
    app: darkwire
  namespace: darkwire-space
spec:
  selector:
    app: darkwire
    name: darkwire-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
